# autonomy

./: .gitignore  AUTHORS  CHANGELOG.rst  CMakeLists.txt  README.en.md  README.md  autonomy-config.cmake.in  autonomy.sh  package.xml  version.json
autolink/: .bazelignore  .bazelrc  .clang-format  CMakeLists.txt  MODULE.bazel  README.md  setup.bash.in  setup.zsh.in
autolink/autolink/: BUILD.bazel  autolink.cpp  autolink.hpp
autolink/autolink/base/: arena_queue.hpp  atomic_hash_map.hpp  atomic_hash_map_test.cpp  atomic_rw_lock.hpp  atomic_rw_lock_test.cpp  bounded_queue.hpp  bounded_queue_test.cpp  concurrent_object_pool.hpp  for_each.hpp  for_each_test.cpp  macros.hpp  object_pool.hpp  object_pool_test.cpp  pthread_rw_lock.hpp  reentrant_rw_lock.hpp  rw_lock_guard.hpp  signal.hpp  signal_test.cpp  thread_pool.hpp  thread_safe_queue.hpp  unbounded_queue.hpp  unbounded_queue_test.cpp  wait_strategy.hpp
autolink/autolink/blocker/: blocker.hpp  blocker_manager.cpp  blocker_manager.hpp  blocker_manager_test.cpp  blocker_test.cpp  intra_reader.hpp  intra_writer.hpp
autolink/autolink/class_loader/: class_loader.cpp  class_loader.hpp  class_loader_manager.cpp  class_loader_manager.hpp  class_loader_register_macro.hpp  class_loader_test.cpp
autolink/autolink/common/: binary.cpp  binary.hpp  environment.hpp  environment_test.cpp  file.cpp  file.hpp  file_test.cpp  global_data.cpp  global_data.hpp  init.cpp  init.hpp  log.hpp  log_test.cpp  macros.hpp  macros_test.cpp  state.cpp  state.hpp  time_conversion.hpp  types.hpp  util.hpp
autolink/autolink/component/: component.hpp  component_base.hpp  component_test.hpp  timer_component.cpp  timer_component.hpp  timer_component_test.cpp
autolink/autolink/conf/: autolink.pb.conf  compute_sched_choreography.conf  compute_sched_classic.conf  control_sched_choreography.conf  control_sched_classic.conf
autolink/autolink/context/: context.hpp  context_test.cpp
autolink/autolink/croutine/: croutine.cpp  croutine.hpp  croutine_test.cpp  routine_factory.hpp
autolink/autolink/data/: cache_buffer.hpp  cache_buffer_test.cpp  channel_buffer.hpp  channel_buffer_test.cpp  data_dispatcher.hpp  data_dispatcher_test.cpp  data_notifier.hpp  data_visitor.hpp  data_visitor_base.hpp  data_visitor_test.cpp
autolink/autolink/docs/: README.md
autolink/autolink/event/: perf_event.hpp  perf_event_cache.cpp  perf_event_cache.hpp
autolink/autolink/examples/: CMakeLists.txt  listener.cpp  paramserver.cpp  service.cpp  talker.cpp  talker_reader.cpp
autolink/autolink/io/: poll_data.hpp  poll_handler.cpp  poll_handler.hpp  poller.cpp  poller.hpp  poller_test.cpp  session.cpp  session.hpp
autolink/autolink/logger/: async_logger.cpp  async_logger.hpp  async_logger_test.cpp  log_file_object.cpp  log_file_object.hpp  log_file_object_test.cpp  logger.cpp  logger.hpp  logger_test.cpp  logger_util.cpp  logger_util.hpp  logger_util_test.cpp
autolink/autolink/mainboard/: mainboard_main.cpp  module_argument.cpp  module_argument.hpp  module_controller.cpp  module_controller.hpp
autolink/autolink/message/: arena_manager_base.hpp  arena_message_wrapper.hpp  message_header.hpp  message_header_test.cpp  message_traits.hpp  message_traits_test.cpp  protobuf_factory.cpp  protobuf_factory.hpp  protobuf_factory_test.cpp  py_message.hpp  py_message_traits.hpp  raw_message.hpp  raw_message_test.cpp  raw_message_traits.hpp
autolink/autolink/node/: node.cpp  node.hpp  node_channel_impl.hpp  node_channel_impl_test.cpp  node_service_impl.hpp  node_test.cpp  reader.hpp  reader_base.hpp  reader_test.cpp  writer.hpp  writer_base.hpp  writer_reader_test.cpp  writer_test.cpp
autolink/autolink/parameter/: parameter.cpp  parameter.hpp  parameter_client.cpp  parameter_client.hpp  parameter_client_test.cpp  parameter_server.cpp  parameter_server.hpp  parameter_server_test.cpp  parameter_service_names.hpp  parameter_test.cpp
autolink/autolink/plugin_manager/: plugin_description.cpp  plugin_description.hpp  plugin_manager.cpp  plugin_manager.hpp
autolink/autolink/profiler/: block.cpp  block.hpp  block_manager.cpp  block_manager.hpp  frame.cpp  frame.hpp  profiler.hpp  profiler_test.cpp
autolink/autolink/proto/: autolink_conf.proto  choreography_conf.proto  classic_conf.proto  clock.proto  component_conf.proto  dag_conf.proto  parameter.proto  perf_conf.proto  proto_desc.proto  qos_profile.proto  record.proto  role_attributes.proto  run_mode_conf.proto  scheduler_conf.proto  simple.proto  topology_change.proto  transport_conf.proto  unit_test.proto
autolink/autolink/record/: header_builder.cpp  header_builder.hpp  record_base.hpp  record_message.hpp  record_reader.cpp  record_reader.hpp  record_reader_test.cpp  record_viewer.cpp  record_viewer.hpp  record_viewer_test.cpp  record_writer.cpp  record_writer.hpp
autolink/autolink/scheduler/: processor.cpp  processor.hpp  processor_context.cpp  processor_context.hpp  processor_test.cpp  scheduler.cpp  scheduler.hpp  scheduler_choreo_test.cpp  scheduler_classic_test.cpp  scheduler_factory.cpp  scheduler_factory.hpp  scheduler_test.cpp
autolink/autolink/service/: client.hpp  client_base.hpp  service.hpp  service_base.hpp
autolink/autolink/service_discovery/: topology_manager.cpp  topology_manager.hpp  topology_manager_test.cpp
autolink/autolink/sysmo/: sysmo.cpp  sysmo.hpp  sysmo_test.cpp
autolink/autolink/task/: task.hpp  task_manager.cpp  task_manager.hpp  task_test.cpp
autolink/autolink/time/: clock.cpp  clock.hpp  clock_test.cpp  duration.cpp  duration.hpp  duration_test.cpp  rate.cpp  rate.hpp  time.cpp  time.hpp  time_test.cpp
autolink/autolink/timer/: timer.cpp  timer.hpp  timer_bucket.hpp  timer_task.hpp  timer_test.cpp  timing_wheel.cpp  timing_wheel.hpp
autolink/autolink/transport/: transport.cpp  (+4 more)
autolink/cmake/: AutolinkConfig.cmake.in  FindAutolink.cmake  autolink.pc.in  functions.cmake
autolink/docker/: build_docker.aarch64.sh  build_docker.x86_64.sh  run_autolink.sh
autolink/doxy-docs/: Doxyfile  environment.yml
autolink/scripts/: autolink.py
autolink/tools/: BUILD.bazel  autolink.bzl
(+1302 files in other folders)
